<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>0.0.1</version>
  <description> Robot Navigation Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>teb_local_planner</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>